<resources>
    <string name="app_name">TAM-2022-5K4-TPI-MJ</string>
    <string name="title_activity_login">Inicie Sesión</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Iniciar Sesión</string>
    <string name="action_sign_in_short">Iniciar Sesión</string>
    <string name="action_skip_login">Omitir Login</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Usuario incorrecto</string>
    <string name="invalid_password">Contraseña incorrecta</string>
    <string name="login_failed">"Error desconocido de inicio de sesión"</string>
    <string name="login_invalid_credentials">"Nombre de Usuario o Contraseña incorrectos"</string>
    <string name="network_timeot">"Timeout"</string>
    <string name="unknown_error">"Timeout"</string>
    <string name="remember_me">"Recordarme"</string>
    <string name="title_activity_main">Desktop</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Mis Dispositivos</string>
    <string name="nav_header_subtitle">Listado</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Configuración</string>
    <string name="action_events">Eventos</string>

    <string name="menu_home">Casa</string>
    <string name="menu_select_device">Seleccion Dispositivo</string>
    <string name="menu_gallery">Oficina</string>
    <string name="bt_disarm">Desactivar</string>
    <string name="bt_home_arm">En Casa</string>
    <string name="bt_arm">Activar</string>
    <string name="bt_panic">Botón de Panico</string>
    <string name="todo">todo</string>
    <string name="channel_name">Notificaciones de Alarma</string>
    <string name="channel_description">Notificaciones de Alarma</string>

</resources>